Fixed name align

--- a/_sass/ph-website-theme/unete.scss
+++ b/_sass/ph-website-theme/unete.scss
@@ -142,6 +142,7 @@ section.h-section__hiring {
           line-height: 20px;
           font-weight: 800;
           color: white;
+          text-align: center;
         }
         span {
           align-self: start;
